estado de resultados, en proceso escenario formula con formulas hijas